# multi-target-detection-cv

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
shaders/: overlay.frag  overlay.vert  video.frag  video.vert
src/: main.cpp
src/ai/: GeminiClient.cpp  GeminiClient.hpp
src/capture/: VideoCapture.cpp  VideoCapture.hpp
src/common/: EnvLoader.hpp  Hungarian.hpp  Types.hpp
src/detection/: Detector.cpp  Detector.hpp
src/render/: AiPanel.cpp  AiPanel.hpp  HudPanel.cpp  HudPanel.hpp  OverlayRenderer.cpp  OverlayRenderer.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VideoTexture.cpp  VideoTexture.hpp
src/threat/: ThreatScorer.cpp  ThreatScorer.hpp
src/tracking/: KalmanTracker.cpp  KalmanTracker.hpp  TrackManager.cpp  TrackManager.hpp
